5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1593_1802.log
== TEST (2019-03-21 19:48:11) 
-- CODE:
from math import *
pi
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:48:28) 
-- CODE:
from math import *
print(pi)
-- OUTPUT:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:48:34) 
-- CODE:

print(pi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(pi)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:48:55) 
-- CODE:
from math import * 
print(pi)
-- OUTPUT:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:54:58) 
-- CODE:
from math import * 
vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
dano = abs(( 5 * d1 ) ** (1/2) + pi * d2 / 3 )
danoint = int(dano)
-- OUTPUT:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:55:38) 
-- CODE:
from math import * 
vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
dano = abs(( 5 * d1 ) ** (1/2) + pi * d2 / 3 )
danoint = int(dano)
print(vida - danoint)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:55:57) 
-- CODE:
from math import * 
vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))
dano = abs(( 5 * d1 ) ** (1/2) + pi * d2 / 3 )
danoint = int(dano)
print(vida - danoint)
-- EXECUTION TIME:
0.171894
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:56:29) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

dano = int(abs(( 5 * d1 ) ** (1/2) + pi * d2 / 3 ))


print(vida - danoint)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(vida - danoint)
NameError: name 'danoint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:57:02) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

dano = int(abs(( 5 * d1 ) ** (1/2) + pi * d2 / 3 ))


print(vida - dano)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:57:23) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

dano = int(abs(( 5 * d1 ) ** (1/2) + pi * d2 / 3 ))


print(vida - dano)
-- EXECUTION TIME:
0.231051
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:58:38) 
-- CODE:
from math import * 

vida = float(input("vida do monstro: "))
d1 = float(input("valor dado 1: "))
d2 = float(input("valor dado 2: "))

dano = int(abs(( 5 * d1 ) ** (1/2) + pi * d2 / 3 ))


print(vida - dano)
-- OUTPUT:
192.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:58:47) 
-- CODE:
from math import * 

vida = float(input("vida do monstro: "))
d1 = float(input("valor dado 1: "))
d2 = float(input("valor dado 2: "))

dano = int(abs(( 5 * d1 ) ** (1/2) + pi * d2 / 3 ))


print(vida - dano)
-- EXECUTION TIME:
0.16531
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:00:07) 
-- CODE:
from math import * 

vida = float(input("vida do monstro: "))
D1 = float(input("valor dado 1: "))
D2 = float(input("valor dado 2: "))

dano = int(abs(( 5 * D1 ) ** (1/2) + pi * D2 / 3 ))

print(vida - dano)
-- OUTPUT:
192.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:00:14) 
-- CODE:
from math import * 

vida = float(input("vida do monstro: "))
D1 = float(input("valor dado 1: "))
D2 = float(input("valor dado 2: "))

dano = int(abs(( 5 * D1 ) ** (1/2) + pi * D2 / 3 ))

print(vida - dano)
-- EXECUTION TIME:
0.156738
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:02:01) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
D1 = int(input("valor dado 1: "))
D2 = int(input("valor dado 2: "))

dano = int( ( 5 * D1 ) ** (1/2) + pi * D2 / 3 )

print(vida - dano)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:02:09) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
D1 = int(input("valor dado 1: "))
D2 = int(input("valor dado 2: "))

dano = int( ( 5 * D1 ) ** (1/2) + pi * D2 / 3 )

print(vida - dano)
-- EXECUTION TIME:
0.137354
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:02:44) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

dano = int( ( 5 * d1 ) ** (1/2) + pi * d2 / 3 )

print(vida - dano)
-- EXECUTION TIME:
0.193172
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
vida do monstro: valor dado 1: valor dado 2: 192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
vida do monstro: valor dado 1: valor dado 2: 289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
vida do monstro: valor dado 1: valor dado 2: 497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:02:45) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

dano = int( ( 5 * d1 ) ** (1/2) + pi * d2 / 3 )

print(vida - dano)
-- EXECUTION TIME:
0.161958
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:03:33) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** (1/2) + pi * d2 / 3 
dano = int(f)
print(vida - dano)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:03:55) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** (1/2) + pi * d2 / 3 
dano = int(f)
print(vida - dano)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 20:04:09) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** (1/2) + pi * d2 / 3 
dano = int(f)
print(vida - dano)
-- EXECUTION TIME:
0.162428
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:13:18) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** (1/2) + pi * d2 / 3 
dano = int(f)
print(vida - dano)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:14:42) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** 0.5 + pi * d2 / 3 
dano = int(f)
print(vida - dano)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:14:54) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** 0.5 + pi * d2 / 3 
dano = int(f)
print(vida - dano)
-- EXECUTION TIME:
0.169948
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:19:17) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** 0.5 + pi * (d2 / 3) 
dano = int(f)
print(vida - dano)
-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:19:24) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** 0.5 + pi * (d2 / 3) 
dano = int(f)
print(vida - dano)
-- EXECUTION TIME:
0.135493
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:20:08) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** 0.5 + pi * (d2 / 3) 
dano = int(f)
print(vida - dano)
print(strq(4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(strq(4))
NameError: name 'strq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:20:40) 
-- CODE:
from math import * 
strz(4)
vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** 0.5 + pi * (d2 / 3) 
dano = int(f)
print(vida - dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    strz(4)
NameError: name 'strz' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:20:47) 
-- CODE:
from math import * 
strq(4)
vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = ( 5 * d1 ) ** 0.5 + pi * (d2 / 3) 
dano = int(f)
print(vida - dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    strq(4)
NameError: name 'strq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:24:05) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = abs(( 5 * d1 ) ** 0.5 + pi * (d2 / 3)) 
dano = int(f)
print(vida - dano)

-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:24:14) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = abs(( 5 * d1 ) ** 0.5 + pi * (d2 / 3)) 
dano = int(f)
print(vida - dano)

-- EXECUTION TIME:
0.201421
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:29:15) 
-- CODE:
from math import * 
sqrt(4)
vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = abs(sqrt( 5 * d1 ) + pi * (d2 / 3)) 
dano = int(f)
print(vida - dano)

-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:29:28) 
-- CODE:
from math import * 
print(sqrt(4))
vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = abs(sqrt( 5 * d1 ) + pi * (d2 / 3)) 
dano = int(f)
print(vida - dano)

-- OUTPUT:
2.0
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:29:40) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = abs(sqrt( 5 * d1 ) + pi * (d2 / 3)) 
dano = int(f)
print(vida - dano)

-- OUTPUT:
192
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:29:53) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = abs(sqrt( 5 * d1 ) + pi * (d2 / 3)) 
dano = int(f)
print(vida - dano)

-- EXECUTION TIME:
0.142254
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
192
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
289
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 22:32:12) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = abs(sqrt( 5 * d1 ) + pi ** (d2 / 3)) 
dano = int(f)
print(vida - dano)

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 22:32:22) 
-- CODE:
from math import * 

vida = int(input("vida do monstro: "))
d1 = int(input("valor dado 1: "))
d2 = int(input("valor dado 2: "))

f = abs(sqrt( 5 * d1 ) + pi ** (d2 / 3)) 
dano = int(f)
print(vida - dano)

-- EXECUTION TIME:
0.174605
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
